更新全部代码

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -2,3 +2,9 @@ jdbc.driverClass=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://127.0.0.1:3306/mock?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&rewriteBatchedStatements=true
 jdbc.username=root
 jdbc.password=root123
+jdbc1.url=jdbc:mysql://127.0.0.1:3306/mock?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&rewriteBatchedStatements=true
+jdbc1.username=root
+jdbc1.password=root123
+jdbc2.url=jdbc:mysql://127.0.0.1:3306/mock?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&rewriteBatchedStatements=true
+jdbc2.username=root
+jdbc2.password=root123
